--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "lint": "eslint src/**/*.{js,jsx,ts,tsx}",
+    "lint:fix": "yarn lint --fix",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -13,7 +15,13 @@
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.5.0",
-    "typescript": "^4.9.3",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.8",
+    "typescript": "^5.0.4",
     "vite": "^4.2.0"
   },
   "installConfig": {
