--- a/package.json
+++ b/package.json
@@ -1,31 +1,36 @@
 {
-  "name": "uclient",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint src/**/*.{js,jsx,ts,tsx}",
-    "lint:fix": "yarn lint --fix",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "preact": "^10.13.0"
-  },
-  "devDependencies": {
-    "@preact/preset-vite": "^2.5.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.1",
-    "@typescript-eslint/parser": "^5.59.1",
-    "eslint": "^8.39.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.8",
-    "typescript": "^5.0.4",
-    "vite": "^4.2.0"
-  },
-  "installConfig": {
-    "pnp": true
-  },
-  "packageManager": "yarn@3.5.0"
+	"name": "uclient",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"lint:eslint": "eslint **/*.{js,jsx,ts,tsx}",
+		"lint:eslint:fix": "yarn lint:eslint --fix",
+		"lint:prettier": "prettier **/*.{json,yml,yaml,css,scss,sass}",
+		"lint:prettier:fix": "yarn lint:prettier --write",
+		"lint": "concurrently -n eslint,prettier \"yarn lint:eslint${LINT_FIX}\" \"yarn lint:prettier${LINT_FIX}\"",
+		"lint:fix": "LINT_FIX=':fix' yarn lint",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"preact": "^10.13.0"
+	},
+	"devDependencies": {
+		"@preact/preset-vite": "^2.5.0",
+		"@typescript-eslint/eslint-plugin": "^5.59.1",
+		"@typescript-eslint/parser": "^5.59.1",
+		"concurrently": "^8.0.1",
+		"eslint": "^8.39.0",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"prettier": "^2.8.8",
+		"typescript": "^5.0.4",
+		"vite": "^4.2.0"
+	},
+	"installConfig": {
+		"pnp": true
+	},
+	"packageManager": "yarn@3.5.0"
 }
