--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"preact": "^10.13.0"
 	},
 	"devDependencies": {
-		"@preact/preset-vite": "^2.5.0",
+		"@prefresh/vite": "^2.2.9",
 		"@typescript-eslint/eslint-plugin": "^5.59.1",
 		"@typescript-eslint/parser": "^5.59.1",
 		"concurrently": "^8.0.1",
