--- a/firebase.json
+++ b/firebase.json
@@ -7,6 +7,21 @@
 				"source": "**",
 				"destination": "/index.html"
 			}
+		],
+		"headers": [
+			{
+				"source": "/.well-known/matrix/client",
+				"headers": [
+					{
+						"key": "Content-Type",
+						"value": "application/json"
+					},
+					{
+						"key": "Access-Control-Allow-Origin",
+						"value": "*"
+					}
+				]
+			}
 		]
 	}
 }
