--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "vite",
-		"build": "tsc && vite build",
+		"dev": "yarn build:identity && vite",
+		"build:identity": "svgo -f identity -o public/identity",
+		"build": "yarn build:identity && tsc && vite build",
 		"lint:eslint": "eslint **/*.{js,jsx,ts,tsx}",
 		"lint:eslint:fix": "yarn lint:eslint --fix",
 		"lint:prettier": "prettier **/*.{json,yml,yaml,css,scss,sass}",
@@ -16,6 +17,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"firebase-tools": "^11.30.0",
 		"preact": "^10.13.0"
 	},
 	"devDependencies": {
@@ -26,13 +28,17 @@
 		"eslint": "^8.39.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-prettier": "^4.2.1",
-		"firebase-tools": "^11.29.1",
+		"js-yaml": "^4.1.0",
 		"prettier": "^2.8.8",
+		"sass": "^1.62.1",
+		"svgo": "^3.0.2",
 		"typescript": "^5.0.4",
-		"vite": "^4.2.0"
+		"utility-types": "^3.10.0",
+		"vite": "^4.2.0",
+		"vite-plugin-html-config": "^1.0.11"
 	},
 	"installConfig": {
 		"pnp": true
 	},
-	"packageManager": "yarn@3.5.0"
+	"packageManager": "yarn@4.5.0"
 }
