--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,12 @@
 		"isolatedModules": true,
 		"noEmit": true,
 		"jsx": "react-jsx",
-		"jsxImportSource": "preact"
+		"jsxImportSource": "preact",
+		"paths": {
+			"@": ["./src"],
+			"@components": ["./components/web"],
+			"@utils": ["./utils"],
+		},
 	},
 	"include": ["src"],
 	"references": [{ "path": "./tsconfig.node.json" }]
